[FIX] mail: dark theme discuss sidebar unread indicator more visible
When a conversation is unread (and no important messages),
the conversation in discuss sidebar has a small dot next to the item.

In white theme its visibility is good, with `.opacity-50`.
In dark theme however this indicator is hard to see.

This commit fixes the issue by keeping 50% opacity in white theme
but bumping to 75% in dark theme specifically.

closes odoo/odoo#208993

--- a/addons/mail/static/src/discuss/core/public_web/discuss_sidebar_categories.scss
+++ b/addons/mail/static/src/discuss/core/public_web/discuss_sidebar_categories.scss
@@ -69,6 +69,7 @@ $o-mail-DiscussSidebarChannel-borderOpacity: .05;
 .o-mail-DiscussSidebar-unreadIndicator {
     font-size: 0.4rem;
     left: -3px;
+    opacity: 50%;
 
     .o-mail-DiscussSidebarSubchannel &:not(.o-compact) {
         left: map-get($spacers, 2) + map-get($spacers, 1) / 2;
